# aegis-dos-protection

./: .gitignore  config.json  install-requirements.sh  install.sh  meson.build  meson_options.txt
doc/presentation-dos/: dos.tex
doc/presentation-dpdk/: dpdk.tex
doc/presentation_review1/: presentation1.tex
doc/presentation_review2/: presentation2.tex
doc/presentation_review3/: presentation3.tex
doc/review_1/: references.bib  review_1.tex
doc/review_1/chapters/: 1-problemstellung.tex  10-machbarkeitsanalyse.tex  11-testdrehbuch.tex  12-abkuerzungsverzeichnis.tex  13-glossar.tex  2-anforderungen.tex  3-anforderungsanalyse.tex  4-aufwandsschaetzung.tex  5-risikoanalyse.tex  6-vorgehen.tex  7-interne-organisation.tex  8-doku-geplanter-entwurf.tex  9-technologien.tex
doc/review_2/: references.bib  review_2.tex
doc/review_2/chapters/: 1-einleitung.tex  2-grobentwurf.tex  3-feinentwurf.tex  4-bugreview.tex  5-kimai.tex  6-abkuerzungsverzeichnis.tex  7-glossar.tex
doc/review_2/img/: inspection_ablauf.plantuml
doc/review_3/: references.bib  review_3.tex
doc/review_3/chapters/: 1-einleitung.tex  10-abkuerzungsverzeichnis.tex  11-glossar.tex  2-grobentwurf.tex  3-feinentwurf.tex  4-tests.tex  5-anforderungen.tex  6-bugreview.tex  7-statistiken.tex  8-kimai.tex  9-bewertung.tex  notiz
examples/: meson.build
examples/basicfwd/: main.c  meson.build
examples/helloworld/: main.c  main.cpp  meson.build
examples/receive/: main.cpp
examples/send/: main.cpp
include/: Cli.hpp  Configurator.hpp  DebugHelper.hpp  Definitions.h  Definitions.hpp  Initializer.hpp  Inspection.hpp  RandomNumberGenerator.hpp
include/PacketDissection/: MbufContainer.hpp  MbufContainerReceiving.hpp  MbufContainerTransmitting.hpp  PacketContainer.hpp  PacketContainerLean.hpp  PacketInfo.hpp  PacketInfoCreator.hpp  PacketInfoIpv4.hpp  PacketInfoIpv4Icmp.hpp  PacketInfoIpv4Tcp.hpp  PacketInfoIpv4Udp.hpp  PacketInfoIpv6Icmp.hpp  PacketInfoIpv6Tcp.hpp  PacketInfoIpv6Udp.hpp  PacketProtTcp.hpp  PacketProtUdp.hpp
include/Threads/: AttackThread.hpp  DefenseThread.hpp  ForwardingThread.hpp  StatisticsThread.hpp  Thread.hpp
include/Treatment/: Treatment.hpp  rand.h  rand.hpp  random.hpp  xxh3.hpp
source/: Cli.cpp  Configurator.cpp  DebugHelper.cpp  Initializer.cpp  main.cpp  meson.build
source/Attacker/: main.cpp
source/Threads/: DefenseThread.cpp  StatisticsThread.cpp  Thread.cpp
source/capture/: meson.build  pkt-capture.cpp
subprojects/gui/: gui.py
test/: Attacker_config.json  Attacker_test.cpp  Configurator_test.cpp  Initializer_config.json  Initializer_test.cpp  Inspection_config.json  Inspection_test.cpp  RandomNumberGenerator_test.cpp  Treatment_test.cpp  config_attacker.json  meson.build  namespace-bob.sh
test/Attacker/: meson.build  namespace-alice.sh
test/ConfigurationManagement/: Configurator_test.cpp  config_test.json  default_config_test.json
test/PacketDissection/: PacketContainer_test.cpp  PacketInfo_test.cpp
test/Treatment/: Treatment_test.cpp
test/dpdk_dummy/: rte_common.h  rte_cycles.h  rte_ethdev.h  rte_ether.h  rte_mbuf.h  rte_mempool.h  rte_ring_core.h  rte_tcp.h
test/libdpdk_dummy/: libdpdk_dummy_test.cpp
test/libdpdk_dummy/include/: rte_branch_prediction.h  rte_byteorder.h  rte_config.h  rte_cycles.h  rte_icmp.h  rte_ip.h  rte_lcore.h  rte_mbuf_core.h  rte_udp.h
