# Please keep all alphabetically sorted
sources = [
	'source/main.cpp',
	'source/Initializer.cpp',
	'source/DebugHelper.cpp',
	'source/Configurator.cpp',
	'source/Threads/DefenseThread.cpp',
	'source/Threads/StatisticsThread.cpp',
	'source/DebugHelper.cpp',
	'source/Initializer.cpp',
	'source/main.cpp',
	]

# Attacker
sources_attack = [
	'source/Attacker/main.cpp'
]

foreach string : sources
	if string != 'source/main.cpp'
		sources_attack += [string]
	endif
endforeach

