
# ..each entry will be a test executable
# ..the structure of the test directory should be equivalent
# ..to the structure in source/ or include/

# Syntax:
# 'Name of the Test (e.g. class name)' : 'Path/to/source/file'
test_sources_dict = {
    #'PacketInfo' : 'test/PacketDissection/PacketInfo_test.cpp',
    'PacketContainer' : 'test/PacketDissection/PacketContainer_test.cpp',
    'Configurator' : 'test/ConfigurationManagement/Configurator_test.cpp',
    'libdpdk_dummy' : 'test/libdpdk_dummy/libdpdk_dummy_test.cpp',
	'Treatment' : 'test/Treatment/Treatment_test.cpp',
    'RandomNumberGenerator' : 'test/RandomNumberGenerator/RandomNumberGenerator_test.cpp',
}