# each entry will be a test executable.
# the structure of the test directory should be equivalent
# to the structure in source/ or include/

# Syntax:
# 'Name of the Test (e.g. class name)' : 'Path/to/source/file'
# Please keep all alphabetically sorted
test_sources_dict = {
    #'Attacker' : 'test/Attacker_test.cpp',
    'Configurator' : 'test/Configurator_test.cpp',
    #'Initializer' : 'test/Initializer_test.cpp',
    #'Inspection' : 'test/Inspection_test.cpp',
    'DPDK_dummy' : 'test/dpdk_dummy_test.cpp',
    'PacketContainer' : 'test/PacketContainer_test.cpp',
    #'PacketInfo' : 'test/PacketInfo_test.cpp',
    'RandomNumberGenerator' : 'test/RandomNumberGenerator_test.cpp',
    #'Treatment' : 'test/Treatment_test.cpp'
}